<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Login">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="-65dp"
        android:layout_marginTop="-50dp"
        android:animateLayoutChanges="true"
        android:backgroundTint="@color/naranja_Login"
        android:clickable="false"
        android:layerType="none"
        app:cardCornerRadius="190dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginEnd="-55dp"
        android:layout_marginBottom="-45dp"
        android:backgroundTint="@color/naranja_Login"
        app:cardCornerRadius="190dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="80dp"
        android:background="?attr/colorOnPrimary"
        android:elevation="2dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/logo_login_los_santos_samp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_app" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/login_bienvenida"
                android:textAlignment="center"
                android:textColor="?attr/colorOnSecondary" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresa_correo_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="5dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ingresa_contraseca_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="5dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/cred_fail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credenciales_incorrectas"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="13sp"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/text_btn_login"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/progress_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:indeterminateTint="@color/morado_enfasis"
                    android:visibility="gone" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="2"
                    android:text="@string/eres_nuevo"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/iraRegistro"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/registrate_aqui"
                    android:textColor="@color/naranja_enfasis"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>